--- a/curso em video/exercicio12/ex014/modelo.html
+++ b/curso em video/exercicio12/ex014/modelo.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 
-    <title>Modelo de Exercício</title>
+    <title>Hora do dia</title>
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div>
-
+        <div id="msg">
+            Aqui vai aparecer a mensagem...
         </div>
-        <div>
-
+        <div id="foto">
+            <img src="imagens/manhaa.png" class="foto" id="imagem" alt="foto de alguém acordando">
         </div>
     </section>
     <footer>
